--- a/main.css
+++ b/main.css
@@ -1,3 +1,14 @@
+/* 
+orange: #f58220;
+light gold: #c09853;
+light blue: #d9edf7;
+middle blue: #bce8f1;
+dark blue: #3a87ad;
+blue: #0087ab;
+alert-yellow: #fcf8e3;
+gray: #f5f5f5;
+*/
+
 body {
   min-height: 100vh;
   min-height: -webkit-fill-available;
@@ -87,3 +98,38 @@ main {
 
 .fw-semibold { font-weight: 600; }
 .lh-tight { line-height: 1.25; }
+
+/* SIDEBAR */
+.sidebar-header {
+  display: inline-flex;
+  align-items: center;
+  padding: .25rem .5rem;
+  font-weight: 600;
+  color: rgba(0, 0, 0, .65);
+  background-color: transparent;
+  border: 0;
+}
+
+.sidebar-header::before {
+  width: 1.25em; 
+}
+
+.sidebar-header a:hover, 
+.sidebar-header a:focus
+{
+  color: rgba(0, 0, 0, .85);
+  background-color: #d2f4ea;
+}
+
+.sidebar-header a {
+display: inline-flex;
+padding: .1875rem .5rem;
+margin-top: .125rem;
+margin-left: 1.25rem;
+text-decoration: none;
+}
+
+/* AUTHBLOCKS */
+.authblock {
+  background-color:#ffffff; 
+}
