--- a/main.css
+++ b/main.css
@@ -18,6 +18,24 @@ html {
   height: -webkit-fill-available;
 }
 
+
+/* general elements */
+h5:not(:first-of-type){
+  margin-top: 2.5rem;
+}
+
+hr {
+  margin: 0 0 .5rem 0;
+  opacity: .5;
+}
+
+
+/* fonts */
+.leader {
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
 main {
   display: flex;
   flex-wrap: nowrap;
@@ -44,52 +62,8 @@ main {
   fill: currentColor;
 }
 
-.dropdown-toggle { outline: 0; }
-
 .nav-flush .nav-link {
   border-radius: 0;
-}
-
-.btn-toggle {
-  display: inline-flex;
-  align-items: center;
-  padding: .25rem .5rem;
-  font-weight: 600;
-  color: rgba(0, 0, 0, .65);
-  background-color: transparent;
-  border: 0;
-}
-.btn-toggle:hover,
-.btn-toggle:focus {
-  color: rgba(0, 0, 0, .85);
-  background-color: #d2f4ea;
-}
-
-.btn-toggle::before {
-  width: 1.25em;
-  line-height: 0;
-  content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-  transition: transform .35s ease;
-  transform-origin: .5em 50%;
-}
-
-.btn-toggle[aria-expanded="true"] {
-  color: rgba(0, 0, 0, .85);
-}
-.btn-toggle[aria-expanded="true"]::before {
-  transform: rotate(90deg);
-}
-
-.btn-toggle-nav a {
-  display: inline-flex;
-  padding: .1875rem .5rem;
-  margin-top: .125rem;
-  margin-left: 1.25rem;
-  text-decoration: none;
-}
-.btn-toggle-nav a:hover,
-.btn-toggle-nav a:focus {
-  background-color: #d2f4ea;
 }
 
 .scrollarea {
@@ -114,22 +88,52 @@ main {
   width: 1.25em; 
 }
 
+.sidebar-header a {
+  margin-left: -.5rem;
+  padding: .1875rem .5rem;
+  color: rgba(0, 0, 0, .65); 
+  text-decoration: none;
+}
+
 .sidebar-header a:hover, 
 .sidebar-header a:focus
 {
   color: rgba(0, 0, 0, .85);
-  background-color: #d2f4ea;
+  background-color: #c09853;
 }
 
-.sidebar-header a {
-display: inline-flex;
-padding: .1875rem .5rem;
-margin-top: .125rem;
-margin-left: 1.25rem;
-text-decoration: none;
+
+.sidebar-nav a {
+  display: inline-flex;
+  padding: .1875rem .5rem;
+  margin-top: .125rem;
+  margin-left: 1.25rem;
+  text-decoration: none;
+}
+.sidebar-nav a:hover,
+.sidebar-nav a:focus {
+  background-color: #c09853;
 }
 
 /* AUTHBLOCKS */
+.type-of-auth {
+  margin-bottom: 2.5rem;
+  background-color: #f58220;
+}
+
+.type-of-auth:not(:first-of-type){
+  margin-top: 6rem;
+}
+
+.type-of-auth h2 {
+  margin: 0;
+}
+
 .authblock {
   background-color:#ffffff; 
+}
+
+.tech_col1 {
+  font-weight: bold;
+  width: 35%;
 }
